--- a/my-medusa-store/package.json
+++ b/my-medusa-store/package.json
@@ -30,11 +30,13 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@mollie/api-client": "^4.2.0",
     "awilix": "^8.0.1",
     "axios": "^1.8.3",
+    "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "medusa-interfaces": "^1.3.10",
-    "medusa-payment-klarna": "^1.4.1",
+    "mollie-api-node": "^1.4.0",
     "pg": "^8.13.0"
   },
   "devDependencies": {
